--- a/krampoline/public/index.html
+++ b/krampoline/public/index.html
@@ -24,7 +24,7 @@
 
 		<script
 			type="text/javascript"
-			src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2a14f4631fb3cfbdc5b1aeebd10a38a0&libraries=services"
+			src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c7cfb17d4e39f4d88086cf5a6b3d5031&libraries=services,clusterer"
 		></script>
 		<title>React App</title>
 	</head>
