--- a/krampoline/public/index.html
+++ b/krampoline/public/index.html
@@ -21,11 +21,22 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
+		<!-- <script
+			type="text/javascript"
+			src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2a14f4631fb3cfbdc5b1aeebd10a38a0&libraries=services"
+		></script> -->
+		<!-- <script
+			type="text/javascript"
+			src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2a14f4631fb3cfbdc5b1aeebd10a38a0&libraries=clusterer"
+		></script> -->
 		<script
 			type="text/javascript"
-			src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c7cfb17d4e39f4d88086cf5a6b3d5031&libraries=services,clusterer"
+			src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2a14f4631fb3cfbdc5b1aeebd10a38a0&libraries=services,clusterer"
 		></script>
+		<!-- <script
+			type="text/javascript"
+			src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c7cfb17d4e39f4d88086cf5a6b3d5031&libraries=services,clusterer"
+		></script> -->
 		<title>React App</title>
 	</head>
 	<body>
